SCG-dashboard-final-folder-inf

--- a/trafic-cop-status/SCG-dashboard-final.html
+++ b/trafic-cop-status/SCG-dashboard-final.html
@@ -31,12 +31,12 @@
                                                                                             src="img/logo.png"
                                                                                             alt=""></a>
         <li>
-            <a href="#">
+            <a href="javascript:void(0);">
                 <img src="img/1.png" alt="">Clients
                 <div class="folder-qty">30</div>
             </a>
         </li>
-        <li><a href="#"><img src="img/2.png" alt="">Folders
+        <li><a href="javascript:void(0);"><img src="img/2.png" alt="">Folders
             <div class="folder-qty">24</div>
         </a></li>
 
@@ -55,11 +55,11 @@
                 </ul>
             </div>
         </li>
-        <li><a href="#"><img src="img/3.png" alt="">Approved Files
+        <li><a href="javascript:void(0);"><img src="img/3.png" alt="">Approved Files
             <div class="folder-qty">6</div>
         </a></li>
-        <li class="active"><a href="#"><img src="img/4.png" alt="">Job status</a></li>
-        <li><a href="#"><img src="img/5.png" alt="">Send for approval</a></li>
+        <li class="active"><a href="javascript:void(0);"><img src="img/4.png" alt="">Job status</a></li>
+        <li><a href="javascript:void(0);"><img src="img/5.png" alt="">Send for approval</a></li>
 
     </ul>
 </div>
@@ -229,7 +229,7 @@
                     <a href="#" class="link"> <img src="img/folder.png" alt=""></a>
                     <div class="fold-item-name">Advantage</div>
                 </div>
-                <div class="fold-item fold-create" data-toggle="modal" data-target="#modal-fold-create">
+                <div class="fold-create" data-toggle="modal" data-target="#modal-fold-create">
                     <div class="fold-create-plus">+</div>
                     <div class="fold-item-name">Create new folder</div>
 
@@ -264,13 +264,153 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" id="create-folder-button" data-dismiss="modal" class="btn btn-primary">Save</button>
+                        <button type="button" id="create-folder-button" data-dismiss="modal" class="btn btn-primary">
+                            Save
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
 
 
+    </div>
+    <div class="folder-activity col-sm-12 col-lg-12 col-md-12 col-xs-12 right-block hide">
+        <div class="folder-activity-head">
+            <button type="button" class="close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <h4>Folder Activity</h4>
+            <h1>Launch of <br> Absurdistic Lines Kit</h1>
+        </div>
+        <div class="folder-activity-team">
+            <div class="section-header">
+                TEAM
+                <i class="fa fa-cog" aria-hidden="true"></i>
+            </div>
+            <div class="section-body">
+                <p>Southern California Graphics</p>
+                <a class="user" href="#">
+                    <div class="user-status online"></div>
+                    <img src="img/Userpic.png" alt="">
+                </a>
+                <a class="user" href="#">
+                    <div class="user-status online"></div>
+                    <img src="img/Userpic.png" alt="">
+                </a>
+                <p>Southern California Graphics</p>
+                <a class="user" href="#">
+                    <div class="user-status online"></div>
+                    <img src="img/Userpic.png" alt="">
+                </a>
+                <a class="user" href="#">
+                    <div class="user-status online"></div>
+                    <img src="img/Userpic.png" alt="">
+                </a>
+                <a class="user" href="#">
+                    <div class="user-status online"></div>
+                    <img src="img/Userpic.png" alt="">
+                </a>
+                <a class="user" href="#">
+                    <div class="user-status online"></div>
+                    <img src="img/Userpic.png" alt="">
+                </a>
+                <a class="user" href="#">
+                    <div class="user-status online"></div>
+                    <img src="img/Userpic.png" alt="">
+                </a>
+                <a class="user" href="#">
+                    <div class="user-status online"></div>
+                    <img src="img/Userpic.png" alt="">
+                </a>
+                <a class="user" href="#">
+                    <div class="user-status online"></div>
+                    <img src="img/Userpic.png" alt="">
+                </a>
+                <a class="add-user" href="#">
+                    <div class="add-user-plus">+</div>
+                </a>
+            </div>
+            <div class="section-header">
+                Latest Uploads
+            </div>
+            <div class="section-body">
+                <div class="latest-uploads-file">
+                    <div class="latest-uploads-file-format">
+                        <img src="img/pdf.png" alt="">
+                    </div>
+                    <div class="latest-uploads-file-name">
+                        documentation.pdf
+                    </div>
+                    <div class="latest-uploads-file-size">
+                        ~31.9 mb
+                    </div>
+                </div>
+                <div class="latest-uploads-file">
+                    <div class="latest-uploads-file-format">
+                        <img src="img/zip.png" alt="">
+                    </div>
+                    <div class="latest-uploads-file-name">
+                        documentation.zip
+                    </div>
+                    <div class="latest-uploads-file-size">
+                        ~31.9 mb
+                    </div>
+                </div>
+                <div class="latest-uploads-file">
+                    <div class="latest-uploads-file-format">
+                        <img src="img/pdf.png" alt="">
+                    </div>
+                    <div class="latest-uploads-file-name">
+                        documentation.pdf
+                    </div>
+                    <div class="latest-uploads-file-size">
+                        ~31.9 mb
+                    </div>
+                </div>
+                <div class="latest-uploads-file">
+                    <div class="latest-uploads-file-format">
+                        <img src="img/xls.png" alt="">
+                    </div>
+                    <div class="latest-uploads-file-name">
+                        documentation.xls
+                    </div>
+                    <div class="latest-uploads-file-size">
+                        ~31.9 mb
+                    </div>
+                </div>
+                <div class="latest-uploads-file">
+                    <div class="latest-uploads-file-format">
+                        <img src="img/pdf.png" alt="">
+                    </div>
+                    <div class="latest-uploads-file-name">
+                        documentation.pdf
+                    </div>
+                    <div class="latest-uploads-file-size">
+                        ~31.9 mb
+                    </div>
+                </div>
+
+            </div>
+            <div class="section-header">
+                PROJECT ACTIVITY
+            </div>
+            <div class="section-body">
+                <div class="activity-user">
+                    <div class="activity-user-photo">
+                        <a href="javascript:void(0);">
+                            <img src="img/Userpic.png" alt="">
+                        </a>
+                    </div>
+                    <div class="activity-user-inf">
+                        <a href="javascript:void(0);">Calum Chambers Dribble</a>
+                        <div class="time-ago">
+                            5 min ago
+                        </div>
+                    </div>
+                    <a class="shots_on" href="javascript:void(0);">Shots on</a>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="drag-and-drop">
         <span class="drag-and-drop-text">Drag and Drop files</span>
@@ -296,23 +436,36 @@
 <script>
     var myDropzone = new Dropzone(".drag-and-drop", {url: "/file/post"});
 
+    function folderInf() {
+        jQuery('.fold-item').click(function () {
+            jQuery('.folder-activity').removeClass("hide");
+        });
+        jQuery('.folder-activity-head .close').click(function () {
+            jQuery(this).parents().find('.folder-activity').addClass('hide');
+        });
+    }
+
+    folderInf();
     jQuery("#create-folder-button").click(function () {
         var FolderName = jQuery(this).parents().find("#folder-name").val();
-        if(
+        if (
             jQuery(this).parents().find("#folder").prop("checked")
-        ){
+        ) {
             jQuery(".fold-create").before(
-                '<div class="fold-item"><a href="#" class="link"> <img src="img/folder.png" alt=""></a><div class="fold-item-name">' +
+                '<div class="fold-item"><a href="javascript:void(0);" class="link"> <img src="img/folder.png" alt=""></a><div class="fold-item-name">' +
                 FolderName +
                 '</div></div>'
             );
         }
         else {
             jQuery(".fold-create").before(
-                '<div class="fold-item fold-ftp"><a href="#" class="link"> <img src="img/ftp.png" alt=""></a><div class="fold-item-name">' +
+                '<div class="fold-item fold-ftp"><a href="javascript:void(0);" class="link"> <img src="img/ftp.png" alt=""></a><div class="fold-item-name">' +
                 FolderName +
                 '</div></div>'
             );
         }
+        folderInf();
     });
+
+
 </script>
